--- a/demo-4-sphere/index.html
+++ b/demo-4-sphere/index.html
@@ -145,7 +145,7 @@
 
 <h2 id="demo-4-real-time-face-embedding-visualization">Demo 4: Real-Time Face Embedding Visualization</h2>
 <p>Released by <a href="http://bamos.github.io">Brandon Amos</a> and
-<a href="https://github.com/gabrfarina">Gabriel Farina</a> on 2016-09-15.</p>
+<a href="https://github.com/gabrfarina">Gabriele Farina</a> on 2016-09-15.</p>
 <hr />
 <p>We had a great opportunity
 (<em>thanks to Jan Harkes, Alison Langmead, and Aaron Henderson</em>)
